--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,9 @@ address{
     font-style: normal;
 }
 
+img{
+    display: block;
+}
 /* General styles */
 
 :root {
@@ -80,6 +83,7 @@ body{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 76px;
 }
 
 .website-logo-dark{
@@ -110,15 +114,15 @@ body{
 }
 
 .list-item-container{
-    padding: 0 16px;
-    margin: 32px 0;
+    padding: 32px 0;
     text-align: center;
+    border-radius: 0px 0px 4px 4px;
 }
 /* Header styles */
 
 .header{
     padding: 24px 0;
-    border-bottom: #4D5AE5;
+    border-bottom: 1px solid #e7e9fc;
 }
 .header-flex{
     display: flex;
@@ -127,12 +131,13 @@ body{
 .navigation-menu-item-link{
     color:var(--dark-color-text);
     font-weight: 500;
+    padding: 24px 0;
 }
 
 .navigation-flex{
     display: flex;
     align-items: center;
-    gap: 76px;
+
     flex-grow: 1;
 }
 
@@ -157,10 +162,12 @@ body{
 .hero{
     background-color: var(--dark-color-text);
     text-align: center;
+    padding: 188px 0;
 }
-.hero-container{
-    padding: 188px 316px;
 
+.hero-container{
+   padding:0 316px;
+   text-align: center;
 }
 
 .hero-title{
@@ -169,9 +176,11 @@ body{
     color:var(--white-background);
     letter-spacing: 0.02em;
     margin-bottom: 48px;
+    max-width: 496px;
 }
 
 .hero-button{
+    display: block;
     color:var(--white-background);
     background-color:var(--primary-brand);
     font-family:var(--font-family);
@@ -179,14 +188,28 @@ body{
     line-height: 1.5;
     letter-spacing: 0.04em;
     font-weight: 500;
-    cursor: pointer;
     padding: 16px 32px;
+    cursor: pointer;
     border-radius: 4px;
+    border: none;
+    height: 56px;
+    min-width: 169px;
 }
 
 
 /* Our Features style */
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
 .list-flex{
     display: flex;
     justify-content: space-between;
@@ -213,7 +236,10 @@ background-color:var(--white-background);
 
 .list-flex-portfolio{
     flex-wrap: wrap;
+    row-gap: 48px;
 }
+
+
 
 .list-flex-portfolio-item{
     flex-basis: calc((100% - 72px) / 3);
@@ -222,32 +248,28 @@ background-color:var(--white-background);
 .portfolio-list-item-container{
     text-align: left; 
     margin: 0;
-    padding: 32px 0;
-    padding-left: 16px;
+    padding: 32px 16px;
     border: 1px solid #E7E9FC;
     border-top: none;
+    border-radius: 0px 0px 4px 4px;
 }
 
-.list-flex-portfolio-item img{
-    display: block;
-}
 /* Footer section style */
 
 .footer{
     background-color: var(--dark-color-text);
-}
-
-.footer-logo{
-    margin-bottom: 16px;
+    padding: 100px 0;
 }
 .footer-container{
-    padding: 100px 0;
     padding-left: 15px;
     text-align: justify;
 }
+.footer-logo-site{
+    margin-bottom: 16px;
+    display: inline-block;
+}
 
-
-.footer-text{
+.footer-text-description{
     color:var(--light-color);
-    width: 264px;
+    max-width: 264px;
 }
