--- a/css/styles.css
+++ b/css/styles.css
@@ -45,14 +45,14 @@ img{
 
 
 body{
-    max-width: 1440px;
+    /* max-width: 1440px; */
     font-family: var(--font-family);
     font-size: var(--main-font-size);
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:var(--body-text);
     background-color: var(--white-background);
-    margin: 0 auto;
+    /* margin: 0 auto; */
 }
 
 .section-title{
@@ -121,7 +121,6 @@ body{
 /* Header styles */
 
 .header{
-    padding: 24px 0;
     border-bottom: 1px solid #e7e9fc;
 }
 .header-flex{
@@ -137,7 +136,6 @@ body{
 .navigation-flex{
     display: flex;
     align-items: center;
-
     flex-grow: 1;
 }
 
@@ -165,24 +163,22 @@ body{
     padding: 188px 0;
 }
 
-.hero-container{
-   padding:0 316px;
-   text-align: center;
-}
-
 .hero-title{
     font-size:3.5em;
     line-height: 1.07;
     color:var(--white-background);
     letter-spacing: 0.02em;
-    margin-bottom: 48px;
     max-width: 496px;
+    margin: 0 auto;
+    margin-bottom: 48px;
 }
 
 .hero-button{
     display: block;
+    margin: 0 auto;
     color:var(--white-background);
     background-color:var(--primary-brand);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     font-family:var(--font-family);
     font-size: 1em;
     line-height: 1.5;
